--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <span class="line"></span>
           <span class="line"></span>
         </div>
-        <div class="title">Admin Work</div>
+        <div class="title">集成中台</div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
