--- a/index.html
+++ b/index.html
@@ -4,25 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="keywords"
-      content="vue,admin,work,vue-admin,vue-admin-work,admin-work,后台,后台管理,框架,spa,vite,vite2,element,element-plus,element-ui,naive,naive-ui,typescript,vue3"
-    />
+    <meta http-equiv="keywords"  content="集成中台" />
     <link rel="stylesheet" href="/static/loading.css" />
-    <title>Admin Work</title>
+    <title>集成中台</title>
   </head>
   <body>
     <div id="app">
       <div class="first-loading-wrp">
-        <div class="loading-wrp">
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
+        <div id="preloader6">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
         <div class="title">集成中台</div>
       </div>
